fix alignment login from in nav, remove upper navbar, moe login/logout component down into main nav. try move campaign creation button into content, rename header nav 'about us' to support,changed about us section to 'Pure Performance' add todo for item'Always view all stats in your dashboard' Update hero bg to blue to make ita bit more, Remove free-until-it-works button

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -7,7 +7,7 @@ html, body {
 }
 
 #hero-bg {
-    background-color: #fff;
+    background-color: #d2dfff;
 }
 
 .table {
